# bevy-experiments

./: Cargo.toml
assets/shaders/: rainbow.wgsl
crates/bevy_radial_physics/: Cargo.toml
measurements/: Measurements.md
src/: main.rs  plugins.rs
src/plugins/: lesson_1.rs  lesson_2.rs  lesson_3.rs  mod.rs  rects.rs  test.rs
src/plugins/lesson_2/: bevy_radial_physics.rs  custom_mesh.rs  perf_log.rs  radial_physics.rs  rainbow_material.rs  rainbow_sprite.rs  shapes.rs  size_and_lifetime.rs
src/plugins/lesson_2/fast_rainbow_material/: mod.rs
src/plugins/lesson_2/fast_rainbow_material/render/: mod.rs  sprite.wgsl
templates/: new_plugin.rs
