[package]
name = "bevy_experiments"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/*",
]

[dependencies]
bevy_radial_physics = { path = "crates/bevy_radial_physics" }
bevy = { version = "0.8.0", features = ["dynamic"] }
rand = "0.8.5"
bytemuck = { version = "1.5", features = ["derive"] }
fixedbitset = "0.4"
bitflags = "1.2"
copyless = "0.1.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
